--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
-// sidebar
+// sidebar 自定义到html的样式 全局css属性
+// import variables from '@/styles/variables.scss' 定义成方法 .的方式获取
 $menuText:#bfcbd9;
 $menuActiveText:rgb(11, 189, 11);
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
