--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -1,6 +1,8 @@
 // cover some element-ui styles
 $color-primary: rgb(11, 189, 11);
 $color-primary-a: rgba(11, 189, 11, 0.5);
+$color-blue: rgb(64, 158, 255);
+$color-blue-a: rgba(64, 158, 255, 0.5);
 
 .navbar {
   .el-breadcrumb__separator {
@@ -23,22 +25,7 @@ body .el-table th.gutter{
     background-color: $color-primary;
     border-color: $color-primary;
 
-    &:hover {
-      background-color: $color-primary;
-      border-color: $color-primary;
-    }
-
-    &:visited {
-      background-color: $color-primary;
-      border-color: $color-primary;
-    }
-
-    &:active {
-      background-color: $color-primary;
-      border-color: $color-primary;
-    }
-
-    &:link {
+    &:hover,&:visited,&:active ,&:link{
       background-color: $color-primary;
       border-color: $color-primary;
     }
@@ -50,7 +37,6 @@ body .el-table th.gutter{
     }
 
     &.is-disabled {
-
       &,
       &:focus,
       &:hover {
@@ -59,7 +45,36 @@ body .el-table th.gutter{
       }
     }
   }
+}
 
+.el-button {
+  &--blue {
+    background-color: $color-blue;
+    border-color: $color-blue;
+    color:#fff;
+
+    &:hover,&:visited, &:active, &:link {
+      background-color: $color-blue;
+      border-color: $color-blue;
+      color:#fff;
+    }
+    &,
+    &:focus {
+      border-color: $color-blue;
+      background: $color-blue;
+      color:#fff;
+    }
+
+    &.is-disabled {
+      &,
+      &:focus,
+      &:hover {
+        border-color: $color-blue-a;
+        background: $color-blue-a;
+        color:#fff;
+      }
+    }
+  }
 }
 
 .el-breadcrumb__inner,
