加深选择器的边框；下载的加全选的新页面；调整计划长度；录入调整指标长度；

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -19,6 +19,9 @@ body .el-table th.gutter{
   display: table-cell!important;
 }
 
+.el-checkbox__inner,.el-radio__inner{
+  border: 1px solid #756d6d;
+}
 
 .el-button {
   &--primary {
