--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,5 +62,10 @@ div:focus {
 
 // main-container global css
 .app-container {
-  padding: 20px;
+  padding: 0px;
+}
+.button-right{
+  float:right;margin:10px 0;
+  margin-left:10px;
+  overflow: hidden;
 }
