--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -65,7 +65,8 @@ div:focus {
   padding: 0px;
 }
 .button-right{
-  float:right;margin:10px 0;
+  float:right;
+  margin:0 0 10px 10px;
   margin-left:10px;
   overflow: hidden;
 }
