--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -144,9 +144,12 @@ body .el-table th.gutter{
   box-sizing: content-box;
 }
 
-.el-input,.el-input__inner{
-  width:200px;
-}
-.el-input-number .el-input,.el-input, .el-input__inner{
-  width:100%;
-}
+// .el-input{
+//   width:200px;
+//   input{
+//     width:100%;
+//   }
+// }
+// .el-select{
+//   width:200px;
+// }
