提交 加个颜色class

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -144,6 +144,9 @@ body .el-table th.gutter{
   box-sizing: content-box;
 }
 
+.summary-cell-style{
+  background: #f5f7fa;
+}
 // .el-input{
 //   width:200px;
 //   input{
