--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -145,7 +145,7 @@ body .el-table th.gutter{
 }
 
 .summary-cell-style{
-  background: #f5f7fa;
+  background: #D1CBE4 !important;
 }
 // .el-input{
 //   width:200px;
